--- a/sites/default/config/editor.editor.full_html.yml
+++ b/sites/default/config/editor.editor.full_html.yml
@@ -1,95 +1,72 @@
-uuid: 0a722f59-2fa8-428c-a852-46a0025d2248
+uuid: eab31cbc-5202-4c28-bb9a-56ed058b9bd4
 langcode: en
 status: true
 dependencies:
   config:
     - filter.format.full_html
   module:
-    - ckeditor
-_core:
-  default_config_hash: 967ijj7p6i7rwrYl7r08WQFeCY_c23YAh0h8u-w_CXM
+    - ckeditor5
 format: full_html
-editor: ckeditor
+editor: ckeditor5
 settings:
   toolbar:
-    rows:
-      -
-        -
-          name: Formatting
-          items:
-            - Bold
-            - Italic
-            - Strike
-            - Superscript
-            - Subscript
-            - '-'
-            - RemoveFormat
-        -
-          name: Alignment
-          items:
-            - JustifyLeft
-            - JustifyCenter
-            - JustifyRight
-            - JustifyBlock
-        -
-          name: Linking
-          items:
-            - DrupalLink
-            - DrupalUnlink
-            - Anchor
-        -
-          name: Lists
-          items:
-            - Styles
-            - BulletedList
-            - NumberedList
-        -
-          name: Media
-          items:
-            - Blockquote
-            - DrupalMediaLibrary
-            - Table
-            - HorizontalRule
-        -
-          name: 'Block Formatting'
-          items:
-            - Format
-        -
-          name: Tools
-          items:
-            - ShowBlocks
-            - Source
-            - bs_grid
-            - Contents
+    items:
+      - bold
+      - italic
+      - strikethrough
+      - superscript
+      - subscript
+      - removeFormat
+      - '|'
+      - alignment
+      - '|'
+      - link
+      - '|'
+      - style
+      - bulletedList
+      - numberedList
+      - '|'
+      - blockQuote
+      - drupalMedia
+      - insertTable
+      - horizontalLine
+      - '|'
+      - heading
+      - codeBlock
+      - '|'
+      - sourceEditing
   plugins:
-    drupallink:
-      linkit_enabled: true
-      linkit_profile: default
-    stylescombo:
-      styles: "a.button|Button\r\np.hang|Hanging Indent\r\np.indent|Indent Paragraph"
-    bs_grid:
-      use_cdn: true
-      cdn_url: 'https://cdn.jsdelivr.net/npm/bootstrap-4-grid@3.4.0/css/grid.min.css'
-      available_columns:
-        1: 1
-        2: 2
-        3: 3
-        4: 4
-        5: 5
-        6: 6
-        7: 7
-        8: 8
-        9: 9
-        10: 10
-        11: 11
-        12: 12
-      available_breakpoints:
-        xs: xs
-        sm: sm
-        md: md
-        lg: lg
-        xl: xl
-        xxl: 0
+    ckeditor5_heading:
+      enabled_headings:
+        - heading2
+        - heading3
+        - heading4
+        - heading5
+        - heading6
+    ckeditor5_style:
+      styles:
+        -
+          label: Button
+          element: '<a class="button">'
+        -
+          label: 'Hanging Indent'
+          element: '<p class="hang">'
+        -
+          label: 'Indent Paragraph'
+          element: '<p class="indent">'
+    ckeditor5_sourceEditing:
+      allowed_tags: {  }
+    ckeditor5_list:
+      reversed: true
+      startIndex: true
+    ckeditor5_alignment:
+      enabled_alignments:
+        - left
+        - center
+        - right
+        - justify
+    media_media:
+      allow_view_mode_override: false
 image_upload:
   status: true
   scheme: public
