--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,6 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/pulibrary/CD-finder"
         }
     ],
     "require": {
@@ -40,12 +36,13 @@
         "drupal/migrate_plus": "^5.1",
         "drupal/migrate_source_csv": "^3.4",
         "drupal/migrate_tools": "^5.0",
+        "drupal/paragraphs": "1.15.0",
         "drupal/pathauto": "^1.8",
+        "drupal/entity_reference_revisions": "1.10.0",
         "drupal/responsive_menu": "^4.4",
         "drupal/search_api": "^1.27",
         "drupal/search_api_autocomplete": "^1.3",
-        "drush/drush": "^10.3",
-        "pulibrary/finder": "dev-main"
+        "drush/drush": "^10.3"
     },
     "conflict": {
         "drupal/drupal": "*"
