Update gemfile for ed25519 style keys. Ignore logs.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /vendor/
 node_modules/
 modules/contrib/*
+log/*
 
 # Ignore configuration files that may contain sensitive information.
 sites/*/settings*.php
