--- a/sites/default/config/core.extension.yml
+++ b/sites/default/config/core.extension.yml
@@ -35,6 +35,7 @@ module:
   image_replace: 0
   inline_entity_form: 0
   layout_builder: 0
+  layout_builder_expose_all_field_blocks: 0
   layout_discovery: 0
   link: 0
   linkit: 0
