--- a/sites/default/config/views.view.search_content.yml
+++ b/sites/default/config/views.view.search_content.yml
@@ -315,6 +315,7 @@ display:
             offset: false
             offset_label: Offset
           quantity: 5
+          pagination_heading_level: h4
       exposed_form:
         type: input_required
         options:
@@ -331,7 +332,7 @@ display:
         type: none
         options: {  }
       cache:
-        type: none
+        type: search_api_none
         options: {  }
       empty:
         area:
