--- a/sites/default/config/cas.settings.yml
+++ b/sites/default/config/cas.settings.yml
@@ -1,5 +1,6 @@
 _core:
   default_config_hash: W42TeamUFaYIcLMbvbx1hngcurDgrV8-Rh_iNsgeFJc
+langcode: en
 login_link_enabled: false
 login_link_label: 'CAS Login'
 login_success_message: ''
@@ -28,6 +29,7 @@ forced_login:
 user_accounts:
   prevent_normal_login: false
   auto_register: false
+  auto_register_follow_registration_policy: false
   email_assignment_strategy: 0
   email_hostname: ''
   email_attribute: ''
