--- a/sites/default/config/core.entity_form_mode.block_content.search_api.yml
+++ b/sites/default/config/core.entity_form_mode.block_content.search_api.yml
@@ -6,5 +6,6 @@ dependencies:
     - block_content
 id: block_content.search_api
 label: 'Search API'
+description: ''
 targetEntityType: block_content
 cache: true
