--- a/sites/default/config/editor.editor.full_html.yml
+++ b/sites/default/config/editor.editor.full_html.yml
@@ -94,8 +94,10 @@ settings:
         - heading5
         - heading6
     ckeditor5_list:
-      reversed: true
-      startIndex: true
+      properties:
+        reversed: true
+        startIndex: true
+      multiBlock: true
     ckeditor5_sourceEditing:
       allowed_tags: {  }
     ckeditor5_style:
@@ -115,7 +117,7 @@ image_upload:
   status: true
   scheme: public
   directory: inline-images
-  max_size: ''
+  max_size: null
   max_dimensions:
     width: null
     height: null
