--- a/sites/default/config/node.type.landing_page.yml
+++ b/sites/default/config/node.type.landing_page.yml
@@ -11,7 +11,7 @@ third_party_settings:
 name: 'Landing Page'
 type: landing_page
 description: 'The Home Page'
-help: ''
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: false
