--- a/sites/default/config/node.type.service.yml
+++ b/sites/default/config/node.type.service.yml
@@ -14,7 +14,7 @@ _core:
 name: Service
 type: service
 description: 'Part of the Finder module'
-help: ''
+help: null
 new_revision: true
 preview_mode: 1
 display_submitted: true
