--- a/sites/default/config/taxonomy.vocabulary.knowledge_category.yml
+++ b/sites/default/config/taxonomy.vocabulary.knowledge_category.yml
@@ -4,5 +4,6 @@ status: true
 dependencies: {  }
 name: 'Knowledge Category'
 vid: knowledge_category
-description: ''
+description: null
 weight: 0
+new_revision: false
