--- a/sites/default/config/taxonomy.vocabulary.resource_category.yml
+++ b/sites/default/config/taxonomy.vocabulary.resource_category.yml
@@ -4,5 +4,6 @@ status: true
 dependencies: {  }
 name: 'Resource Category'
 vid: resource_category
-description: ''
+description: null
 weight: 0
+new_revision: false
